--- a/news.html
+++ b/news.html
@@ -55,7 +55,15 @@
 						</ul>
 					</li>
                     <li><a href="members.html"><b>Members</b></a></li>
-                    <li><a href="chapter.html"><b>Lacal Chapters</b></a></li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown"><b>Local chapter</b><b class="caret"></b></a>
+						<ul class="dropdown-menu">
+                            <li><a href="peradeniya.html"><b>Peradeniya</b></a></li>
+                            <li><a ><b>Moratuwa</b></a></li>
+                            <li><a ><b>Ruhuna</b></a></li>
+                            <li><a ><b>SLIIT</b></a></li>
+						</ul>
+					</li>
                     <li><a href="contact.html"><b>Contact Us</b></a></li>
 				</ul>
 			</div><!--/.nav-collapse -->
@@ -63,14 +71,8 @@
 	</div> 
 	<!-- /.navbar -->
 
-    <!--
+	<header id="head" class="secondary"></header>
 
-
-
--->
-<header id="head" class="secondary"></header>
-	
-    <!-- -->
 	<!-- container............................................................................................................................. -->
 	<div class="container"><br><br>
         
